--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-spinners": "^0.13.8",
     "sass": "^1.62.0",
     "vite-plugin-svgr": "^2.4.0"
   },
